--- a/assignment-09/css/style.css
+++ b/assignment-09/css/style.css
@@ -4,11 +4,10 @@ h1 {
 
 .square {
   width: 50%;
-  height: 100px;
 }
 
 #blue {
-  background-color: #8FB0A9
+  background-color: #8FB0A9;
 }
 
 #yellow {
