--- a/assignment-10/css/style.css
+++ b/assignment-10/css/style.css
@@ -6,6 +6,7 @@ body {
   color: black;
   padding: 5px;
   font-family: 'Oswald', sans-serif;
+  font-size: 5em
 }
 
 /* Paragraph Content */
@@ -14,6 +15,26 @@ body {
   color: grey;
   padding: 5px;
 }
-p::first-letter {font-family: 'Staatliches', cursive;}
+p::first-letter {font-family: 'Staatliches', cursive;
+font-size: 3em;
+font-weight: 600;
+}
 
 /* "Read More!" Link */
+a {
+  background-color: lightblue;
+  color: #FFFFFF;
+  padding: 5px;
+}
+
+a:hover {
+  font-style: italic;
+}
+
+a:visited {
+  color: #999999;
+}
+
+a:active {
+  background-color: #FFFFFF;
+}
