--- a/assignment-10/css/style.css
+++ b/assignment-10/css/style.css
@@ -6,7 +6,7 @@ body {
   color: black;
   padding: 5px;
   font-family: 'Oswald', sans-serif;
-  font-size: 2em
+
 }
 
 /* Paragraph Content */
@@ -15,7 +15,8 @@ body {
   color: grey;
   padding: 5px;
 }
-p::first-letter {font-family: 'Staatliches', cursive;
+p::first-letter {
+font-family: 'Staatliches', cursive;
 font-size: 3em;
 font-weight: 600;
 }
