--- a/assignment-12/css/style.css
+++ b/assignment-12/css/style.css
@@ -1,20 +1,40 @@
-/*-----------------------
-| CSS for General Styling|
-------------------------*/
-
-/* SITE-WIDE ELEMENTS: */
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200&family=Staatliches&display=swap');
+/* Page-Wide */
 body {
-  background-color: lightyellow;
-  background-image: url('../images');
-  background-repeat: repeat-x;
-  background-attachment: fixed;
+  background-color: lightgrey;
+  color: black;
+  padding: 5px;
+  font-family: 'Oswald', sans-serif;
+
 }
-h1, span {
-  margin: 0;
-  font-family: "Pacifico"
-  color:lightgreen;
-  text-align: center;
+
+/* Paragraph Content */
+.text {
+  background-color: #FFFFFF;
+  color: grey;
+  padding: 5px;
 }
-h3 {
-  font-family:
+p::first-letter {
+font-family: 'Staatliches', cursive;
+font-size: 3em;
+font-weight: 600;
+}
+
+/* "Read More!" Link */
+a {
+  background-color: lightblue;
+  color: #FFFFFF;
+  padding: 5px;
+}
+
+a:hover {
+  font-style: italic;
+}
+
+a:visited {
+  color: #999999;
+}
+
+a:active {
+  background-color: #FFFFFF;
 }
